--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <header>
     <div class="wrapper">
       <h1><a href="index.html" id="logo">FlyGraph</a></h1>
-      <span id="slogan">Fast, Frequent &amp; Safe Flights</span>
+      <span id="slogan">Fast, Accurate & Realistic Calculations</span>
       <nav id="top_nav">
         <ul>
           <li><a href="index.html" class="nav1">Home</a></li>
@@ -136,33 +136,29 @@
     <div class="wrapper pad1">
       <article class="col1">
         <div class="box1">
-          <h2 class="top">Offers of the Week from UK</h2>
-          <div class="pad"> <strong>From Birmingham</strong><br>
+          <h2 class="top">Last Calculations</h2>
+          <div class="pad"> <strong>From AirAstana</strong><br>
             <ul class="pad_bot1 list1">
-              <li> <span class="right color1">from GBP 143.-</span> <a href="book2.html">Zurich</a> </li>
+              <li> <span class="right color1">$1000.00</span> <a href="book2.html">AST >> ALM</a> </li>
             </ul>
-            <strong>From London City</strong><br>
+            <strong>From Bek Air</strong><br>
             <ul class="pad_bot1 list1">
-              <li> <span class="right color1">from GBP 176.-</span> <a href="book2.html">Basel</a> </li>
-              <li> <span class="right color1">from GBP 109.-</span> <a href="book2.html">Geneva</a> </li>
+              <li> <span class="right color1">$1000.00</span> <a href="book2.html">AST >> ALM</a> </li>
+              <li> <span class="right color1">$1000.00</span> <a href="book2.html">AST >> ALM</a> </li>
+              <li> <span class="right color1">$1000.00</span> <a href="book2.html">AST >> ALM</a> </li>
             </ul>
-            <strong>From London Heathrow</strong><br>
+            <strong>From VladislavG123 Airways</strong><br>
             <ul class="pad_bot2 list1">
-              <li> <span class="right color1">from GBP 100.-</span> <a href="book2.html">Geneva</a> </li>
-              <li> <span class="right color1">from GBP 112.-</span> <a href="book2.html">Zurich</a> </li>
-              <li> <span class="right color1">from GBP 88.-</span> <a href="book2.html">Basel</a> </li>
-            </ul>
-          </div>
-          <h2>From Ireland To Switzerland</h2>
-          <div class="pad"> <strong>From Dublin</strong><br>
-            <ul class="pad_bot2 list1">
-              <li class="pad_bot1"> <span class="right color1">from EUR 122.-</span> <a href="book2.html">Zurich</a> </li>
+              <li> <span class="right color1">$1000.00</span> <a href="book2.html">AST >> ALM</a> </li>
+              <li> <span class="right color1">$1000.00</span> <a href="book2.html">AST >> ALM</a> </li>
+              <li> <span class="right color1">$1000.00</span> <a href="book2.html">AST >> ALM</a> </li>
+              <li> <span class="right color1">$1000.00</span> <a href="book2.html">AST >> ALM</a> </li>
             </ul>
           </div>
         </div>
       </article>
       <article class="col2">
-        <h3>About Our FlyGraph<span>Template created by TemplateMonster.com team</span></h3>
+        <h3>About FlyGraph<span>Created by Nurbol, Rakhat and Vladislav</span></h3>
         <div class="wrapper">
           <article class="cols">
             <figure><img src="images/page1_img1.jpg" alt="" class="pad_bot2"></figure>
@@ -175,7 +171,7 @@
             <p>With PSD source files and without them. PSD source files are available for free for the registered members of Templates.com. The basic package (without PSD source files) is available for anyone without registration).</p>
           </article>
         </div>
-        <a href="#" class="button1"><strong>Read More</strong></a> </article>
+      </article>
     </div>
   </section>
   <!--content end-->
@@ -190,7 +186,7 @@
         <li><a href="#" class="normaltip"><img src="images/icon5.jpg" alt=""></a></li>
         <li><a href="#" class="normaltip"><img src="images/icon6.jpg" alt=""></a></li>
       </ul>
-      <div class="links">Copyright &copy; <a href="#">Domain Name</a> All Rights Reserved<br>
+      <div class="links">Copyright &copy;<a href="#">flygraph</a> All Rights Reserved<br>
         Design by <a target="_blank" href="http://www.templatemonster.com/">TemplateMonster.com</a></div>
     </div>
   </footer>
